[package]
name = "kg-js"
version = "0.3.0"
authors = ["jchlapinski <jakub.chlapinski@kodegenix.pl>"]
description = """
Wrapper for duktape JavaScript engine.
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kodegenix/kg-js"
edition = "2021"
build = "build.rs"

[features]
default = ["serde"]

[dependencies]
serde = { version = "1.0.130", optional = true, features = ["derive"] }
log = "0.4.14"
bitflags = "1.3.2"
rlibc = "1.0.0"
once_cell = "1.8.0"

[dev-dependencies]
smart-default = "0.6.0"
serde_json = "1.0.68"

[build-dependencies]
cc = { version = "1.0.71", features = ["parallel"] }
