[package]
name = "kg-js"
version = "0.8.4"
authors = ["jchlapinski <jakub.chlapinski@kodegenix.pl>", "Wiktor Sikora <wiktorsikora7@gmail.com>"]
description = """
Wrapper for duktape JavaScript engine.
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kodegenix/kg-js"
keywords = ["javascript", "duktape", "bindings", "embeddable", "engine"]

edition = "2021"
build = "build.rs"

[features]
default = ["serde"]

[dependencies]
serde = { version = "1.0.133", features = ["derive"], optional = true }
log = "0.4.14"
bitflags = "1.3.2"
once_cell = "1.9.0"
smallbox = "0.8.1"

[dev-dependencies]
smart-default = "0.6.0"
serde_json = "1.0.74"

[build-dependencies]
cc = { version = "1.0.72", features = ["parallel"] }
